--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 }
 </style>
 <body>
-    <p class = "myClass">Hello world</p>
+    <p class = "myClass">Hello world!</p>
 
    <!-- <script>
         alert("Буду проституткой!");
