--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </style>
 <body>
     <p class = "myClass">Hello world!</p>
+    <p>Сыну молодец</p>
 
    <!-- <script>
         alert("Буду проституткой!");
