--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <p class = "myClass">Hello world!</p>
     <p>Сыну молодец</p>
+    <p>Жена  молодец</p>
 
    <!-- <script>
         alert("Буду проституткой!");
