--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p class = "myClass">Hello world!</p>
     <p>Сыну молодец</p>
     <p>Жена  молодец</p>
+    <p>Проверка</p>
 
    <!-- <script>
         alert("Буду проституткой!");
