--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <p>Сыну молодец</p>
     <p>Жена  молодец</p>
     <p>Проверка</p>
+    <p>Проверка 2</p>
 
    <!-- <script>
         alert("Буду проституткой!");
