--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
     </script> -->
 
     <script src="js/script.js"></script>
+    <script src="scriptHW.js"></script>
+    <script src="functions.js"></script>
 </body>
 </html>
