--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <script src="js/script.js"></script>
     <script src="scriptHW.js"></script>
     <script src="functions.js"></script>
+    <script src="funcMethods.js"></script>
 </body>
 </html>
