--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     background-color: rgb(0,0,255);
 }
 </style>
+
+<link rel="stylesheet" href="main.css">
+
 <body>
     <p class = "myClass">Hello world!</p>
     <p>Сыну молодец</p>
@@ -24,9 +27,12 @@
         alert("Буду проституткой!");
     </script> -->
 
-    <script src="js/script.js"></script>
-    <script src="scriptHW.js"></script>
+    <!-- <script src="js/script.js"></script>
+    <script src="scriptHW.js"></script> -->
+    <!-- <script src="functions.js"></script> -->
+    <!-- <script src="funcMethods.js"></script> -->
+
+    <div class="out-1"></div>
     <script src="functions.js"></script>
-    <script src="funcMethods.js"></script>
 </body>
 </html>
