--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!-- <script src="funcMethods.js"></script> -->
 
     <div class="out-1"></div>
-    <script src="functions.js"></script>
+    <!-- <script src="functions.js"></script> -->
+    <script src="methods.js"></script>
 </body>
 </html>
