--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
 
     <div class="out-1"></div>
     <!-- <script src="functions.js"></script> -->
-    <script src="methods.js"></script>
+    <script src="ObjectsAndMethods.js"></script>
 </body>
 </html>
