--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
     <div class="out-1"></div>
     <!-- <script src="functions.js"></script> -->
-    <script src="ObjectsAndMethods.js"></script>
+    <!-- <script src="ObjectsAndMethods.js"></script> -->
+        <script src="massivs.js"></script>
+
 </body>
 </html>
