--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <div class="out-1"></div>
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="ObjectsAndMethods.js"></script> -->
-        <script src="massivs.js"></script>
+        <!-- <script src="massivs.js"></script> -->
+        <script src="liksAndReference"></script>
 
 </body>
 </html>
