--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="ObjectsAndMethods.js"></script> -->
         <!-- <script src="massivs.js"></script> -->
-        <script src="liksAndReference"></script>
+        <!-- <script src="liksAndReference"></script> -->
+        <script src="OOP.js"></script>
 
 </body>
 </html>
