--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         alert("Буду проституткой!");
     </script> -->
 
-    <!-- <script src="js/script.js"></script>
-    <script src="scriptHW.js"></script> -->
+    <script src="js/script.js"></script>
+    <script src="scriptHW.js"></script>
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="funcMethods.js"></script> -->
 
