--- a/index.html
+++ b/index.html
@@ -17,27 +17,29 @@
 <link rel="stylesheet" href="main.css">
 
 <body>
-    <p class = "myClass">Hello world!</p>
+    <h1 id="myH"></h1>
+    <!-- <p class = "myClass">Hello world!</p>
     <p>Сыну молодец</p>
     <p>Жена  молодец</p>
     <p>Проверка</p>
-    <p>Проверка 2</p>
+    <p>Проверка 2</p> -->
 
    <!-- <script>
         alert("Буду проституткой!");
     </script> -->
 
-    <script src="js/script.js"></script>
-    <script src="scriptHW.js"></script>
+    <!-- <script src="js/script.js"></script>
+    <script src="scriptHW.js"></script> -->
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="funcMethods.js"></script> -->
 
-    <div class="out-1"></div>
+    <!-- <div class="out-1"></div> -->
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="ObjectsAndMethods.js"></script> -->
         <!-- <script src="massivs.js"></script> -->
         <!-- <script src="liksAndReference"></script> -->
-        <script src="OOP.js"></script>
+        <!-- <script src="OOP.js"></script> -->
+        <script src="easyJS.js"></script>
 
 </body>
 </html>
