--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <!-- <script src="massivs.js"></script> -->
         <!-- <script src="liksAndReference"></script> -->
         <!-- <script src="OOP.js"></script> -->
-        <script src="easyJS.js"></script>
+        <!-- <script src="easyJS.js"></script> -->
+        <script src="typing.js"></script>
 
 </body>
 </html>
