--- a/index.html
+++ b/index.html
@@ -33,14 +33,27 @@
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="funcMethods.js"></script> -->
 
-    <!-- <div class="out-1"></div> -->
+    <div class="out-1"></div>
+    <div class="out-2"></div>
+    <div class="section">
+        <input type="text" class="i-3">
+        <button class="b-3">Button</button>
+        <div class="out-3"></div>
+    </div>
+    <div class="section">
+        <p>Пользователь вводит кол-во лет</p>
+        <input type="text" class="i-4">
+        <button class="b-4">Button</button>
+        <div class="out-4"></div>
+    </div>
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="ObjectsAndMethods.js"></script> -->
         <!-- <script src="massivs.js"></script> -->
         <!-- <script src="liksAndReference"></script> -->
         <!-- <script src="OOP.js"></script> -->
         <!-- <script src="easyJS.js"></script> -->
-        <script src="typing.js"></script>
+        <!-- <script src="typing.js"></script> -->
+        <script src="returnInJS.js"></script>
 
 </body>
 </html>
