--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="funcMethods.js"></script> -->
 
-    <div class="out-1"></div>
+    <!-- <div class="out-1"></div>
     <div class="out-2"></div>
     <div class="section">
         <input type="text" class="i-3">
@@ -45,7 +45,24 @@
         <input type="text" class="i-4">
         <button class="b-4">Button</button>
         <div class="out-4"></div>
-    </div>
+    </div> -->
+    <div class="box" id="box"></div>
+		<button class="btns">1</button>
+		<button>2</button>
+		<button>3</button>
+		<button>4</button>
+		<button>5</button>
+
+		<div class="circle"></div>
+		<div class="circle"></div>
+		<div class="circle"></div>
+
+		<div class="wrapper">
+			<div class="heart"></div>
+			<div class="heart"></div>
+            <div class="heart"></div>
+            
+		</div>
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="ObjectsAndMethods.js"></script> -->
         <!-- <script src="massivs.js"></script> -->
@@ -53,7 +70,8 @@
         <!-- <script src="OOP.js"></script> -->
         <!-- <script src="easyJS.js"></script> -->
         <!-- <script src="typing.js"></script> -->
-        <script src="returnInJS.js"></script>
+        <!-- <script src="returnInJS.js"></script> -->
+        <script src="dom.js"></script>
 
 </body>
 </html>
