--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="out-4"></div>
     </div> -->
     <div class="box" id="box"></div>
-		<button class="btns">1</button>
+		<button onclick="alert('Click')" class="btns">1</button>
 		<button>2</button>
 		<button>3</button>
 		<button>4</button>
@@ -71,7 +71,8 @@
         <!-- <script src="easyJS.js"></script> -->
         <!-- <script src="typing.js"></script> -->
         <!-- <script src="returnInJS.js"></script> -->
-        <script src="dom.js"></script>
+        <!-- <script src="dom.js"></script> -->
+        <script src="events.js"></script>
 
 </body>
 </html>
