--- a/index.html
+++ b/index.html
@@ -18,15 +18,6 @@
 
 <body>
     <h1 id="myH"></h1>
-    <!-- <p class = "myClass">Hello world!</p>
-    <p>Сыну молодец</p>
-    <p>Жена  молодец</p>
-    <p>Проверка</p>
-    <p>Проверка 2</p> -->
-
-   <!-- <script>
-        alert("Буду проституткой!");
-    </script> -->
 
     <!-- <script src="js/script.js"></script>
     <script src="scriptHW.js"></script> -->
@@ -47,7 +38,9 @@
         <div class="out-4"></div>
     </div> -->
     <div class="box" id="box"></div>
-		<button onclick="alert('Click')" class="btns">1</button>
+		<button class="b-1">1</button>
+		<button class="b-2">2</button>
+		<button class="b-3">2</button>
 		<button>2</button>
 		<button>3</button>
 		<button>4</button>
@@ -62,7 +55,7 @@
 			<div class="heart"></div>
             <div class="heart"></div>
             
-		</div>
+		</div> 
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="ObjectsAndMethods.js"></script> -->
         <!-- <script src="massivs.js"></script> -->
@@ -72,7 +65,8 @@
         <!-- <script src="typing.js"></script> -->
         <!-- <script src="returnInJS.js"></script> -->
         <!-- <script src="dom.js"></script> -->
-        <script src="events.js"></script>
+        <!-- <script src="events.js"></script> -->
+        <script src="Arrow_function.js"></script>
 
 </body>
 </html>
