--- a/events.html
+++ b/events.html
@@ -8,13 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="overlay">
+    <!-- <div class="overlay">
         <button id="btn">Нажми меня</button>
     </div>
     <button >Нажми меня</button>
-    <button>Нажми меня</button>
+    <button>Нажми меня</button> -->
+    <div class="box">
+        Нажми меня
+    </div>
 
-    <a href="https://www.youtube.com/">https://www.youtube.com/</a>
-    <script src="events.js"></script>
+    <!-- <a href="https://www.youtube.com/">https://www.youtube.com/</a> -->
+    <!-- <script src="events.js"></script> -->
+    <script src="mobileEvents.js"></script>
 </body>
 </html>
