--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!-- <script src="returnInJS.js"></script> -->
         <!-- <script src="dom.js"></script> -->
         <!-- <script src="events.js"></script> -->
-        <script src="Arrow_function.js"></script>
+        <!-- <script src="Arrow_function.js"></script> -->
 
 </body>
 </html>
