--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="main.css">
 
 <body>
+    <script async_defer src="async_defer.js"></script>
     <h1 id="myH"></h1>
 
     <!-- <script src="js/script.js"></script>
@@ -37,6 +38,7 @@
         <button class="b-4">Button</button>
         <div class="out-4"></div>
     </div> -->
+    <p>Lorem ipsum dolor sit amet.</p>
     <div class="box" id="box"></div>
 		<button class="b-1">1</button>
 		<button class="b-2">2</button>
@@ -66,7 +68,8 @@
         <!-- <script src="returnInJS.js"></script> -->
         <!-- <script src="dom.js"></script> -->
         <!-- <script src="events.js"></script> -->
-        <!-- <script src="Arrow_function.js"></script> -->
+        <script defer src="Arrow_function.js"></script>
+        
 
 </body>
 </html>
